{
    "name": "TouchControls",
    "maps": [
        {
            "name": "TouchMap",
            "id": "cc1c118e-6083-4c64-80c8-82c8610409b0",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "0a25d49d-d027-4e89-abbd-f51c3f8e750c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "e7afcaca-8eef-41fd-a750-99312882d408",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchMoved",
                    "type": "Value",
                    "id": "00d8e27d-fb47-4f8f-873c-9780f9af2803",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerID",
                    "type": "PassThrough",
                    "id": "ffd1eb75-2dea-47b0-91a5-f972f0e7c50b",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "149e7a19-9006-4b6d-873d-3736aa49d76e",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4937bf61-39bf-4cda-8553-9ccb21c0efb0",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2b64157-6015-4411-aac4-cad78598086e",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5576f29-c7c9-4815-a8fc-a87e772edbfb",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerID",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}